<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">酒泉生活</string>
    <string name="home">主页</string>
    <string name="house">爱房产</string>
    <string name="shop">找好店</string>
    <string name="service">服务</string>
    <string name="trip">旅游</string>
    <string name="job">找工作</string>
    <string name="readliy_take">随手拍</string>
    <string name="publish">爱发布</string>
    <string name="community">论坛</string>
    <string name="quanzi">圈子</string>
    <string name="food">美食</string>
    <string name="car">汽车</string>
    <string name="no_data">没有找到符合条件的房源</string>
    <string name="start_camera">拍照</string>
    <string name="add_pic_from_local">从本地选取图片</string>
    <string name="more_than_max">超过了上限</string>
    <string name="preview">预览</string>
    <string name="recent_photos">最近照片</string>
    <string name="sure">确定</string>
    <string name="select_photos">选择照片</string>
    <string name="back">返回</string>
    <string name="taking_pictures">拍摄照片</string>
    <string name="max_img_limit_reached">不能选择超过%d个图像</string>
    <string name="btn_sure">确定</string>
    <string name="title_forum_all">全部</string>
    <string name="title_forum_new">最新</string>
    <string name="title_forum_hot">热门</string>
    <string name="title_forum_essence">精华</string>
    <string name="title_forum_top">置顶</string>
    <string name="default_pull_down_label">下拉刷新</string>
    <string name="default_pull_down_release_label">松开后刷新数据</string>
    <string name="default_pull_down_refreshing_label">正在加载\u2026</string>
    <string name="default_pull_up_label">上拉加载</string>
    <string name="default_pull_up_release_label">松开后加载数据</string>
    <string name="default_pull_up_refreshing_label">正在加载\u2026</string>
    <string name="operation_canceled">操作已取消</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="please_wait">请稍后</string>
    <string name="back_tag">back_tag</string>
    <string name="conversation_list">会话列表</string>

</resources>