<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:and="http://schemas.android.com/apk/res/com.jiuquanlife"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.jiuquanlife.view.SexangleViewGroup
        android:id="@+id/sexangleView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp" >

        <com.jiuquanlife.view.SexangleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            and:bgcolor="@color/home_yellow"
            and:pressedcolor="@color/home_yellow"
            and:src="@drawable/ic_menu_trip"
            and:textSize="12sp"
            and:texts="@string/trip" />

        <com.jiuquanlife.view.SexangleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            and:bgcolor="@color/home_red"
            and:pressedcolor="@color/home_red"
            and:src="@drawable/ic_menu_service"
            and:textSize="12sp"
            and:texts="@string/service" />

        <com.jiuquanlife.view.SexangleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            and:bgcolor="@color/home_green"
            and:pressedcolor="@color/home_green"
            and:src="@drawable/ic_menu_car"
            and:textSize="12sp"
            and:texts="@string/car" />

        <com.jiuquanlife.view.SexangleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            and:bgcolor="@color/home_orange"
            and:pressedcolor="@color/home_orange"
            and:src="@drawable/ic_menu_shop"
            and:textSize="12sp"
            and:texts="@string/quanzi" />

        <com.jiuquanlife.view.SexangleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            and:bgcolor="@color/home_green_dark"
            and:pressedcolor="@color/home_green_dark"
            and:src="@drawable/ic_menu_food"
            and:textSize="12sp"
            and:texts="@string/food" />
         <com.jiuquanlife.view.SexangleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            and:bgcolor="@color/home_green_blue"
            and:pressedcolor="@color/home_green_blue"
            and:src="@drawable/ic_menu_job"
            and:textSize="12sp"
            and:texts="@string/job" />
    </com.jiuquanlife.view.SexangleViewGroup>

</FrameLayout>